--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul>
                 <li>
                     <div class="li-text li-underline">
-                    <a href="hd01.html">
+                    <a href="https://zyb070312.github.io/hundun2/">
 						<div class="q1">HD-1变异巨鼠</div>
 						</a>
                   </div>
